# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "intro1", path = "exercises/00_intro/intro1.rs" },
  { name = "intro2", path = "exercises/00_intro/intro2.rs" },
  { name = "variables1", path = "exercises/01_variables/variables1.rs" },
  { name = "variables2", path = "exercises/01_variables/variables2.rs" },
  { name = "variables3", path = "exercises/01_variables/variables3.rs" },
  { name = "variables4", path = "exercises/01_variables/variables4.rs" },
  { name = "variables5", path = "exercises/01_variables/variables5.rs" },
  { name = "variables6", path = "exercises/01_variables/variables6.rs" },
  { name = "functions1", path = "exercises/02_functions/functions1.rs" },
  { name = "functions2", path = "exercises/02_functions/functions2.rs" },
  { name = "functions3", path = "exercises/02_functions/functions3.rs" },
  { name = "functions4", path = "exercises/02_functions/functions4.rs" },
  { name = "functions5", path = "exercises/02_functions/functions5.rs" },
  { name = "if1", path = "exercises/03_if/if1.rs" },
  { name = "if2", path = "exercises/03_if/if2.rs" },
  { name = "if3", path = "exercises/03_if/if3.rs" },
  { name = "primitive_types1", path = "exercises/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "exercises/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "exercises/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "exercises/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "exercises/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "exercises/04_primitive_types/primitive_types6.rs" },
  { name = "vecs1", path = "exercises/05_vecs/vecs1.rs" },
  { name = "vecs2", path = "exercises/05_vecs/vecs2.rs" },
  { name = "move_semantics1", path = "exercises/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "exercises/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "exercises/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "exercises/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "exercises/06_move_semantics/move_semantics5.rs" },
  { name = "structs1", path = "exercises/07_structs/structs1.rs" },
  { name = "structs2", path = "exercises/07_structs/structs2.rs" },
  { name = "structs3", path = "exercises/07_structs/structs3.rs" },
  { name = "enums1", path = "exercises/08_enums/enums1.rs" },
  { name = "enums2", path = "exercises/08_enums/enums2.rs" },
  { name = "enums3", path = "exercises/08_enums/enums3.rs" },
  { name = "q0_point", path = "exercises/99_shapes/q0_point.rs" },
  { name = "q1_circle", path = "exercises/99_shapes/q1_circle.rs" },
  { name = "q2_rectangle", path = "exercises/99_shapes/q2_rectangle.rs" },
  { name = "q3_overlap", path = "exercises/99_shapes/q3_overlap.rs" },
  { name = "q4_shape", path = "exercises/99_shapes/q4_shape.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
